Fix word cloud and card description in collapsed results

--- a/hw6/static/styles.css
+++ b/hw6/static/styles.css
@@ -165,7 +165,7 @@ form
 {
     display: flex;
     flex-wrap: wrap;
-    width: 607px;
+    width: 628px;
 }
 
 #div-table {
